fix: z-index

--- a/src/index.css
+++ b/src/index.css
@@ -113,6 +113,7 @@ input[type='number']::-webkit-outer-spin-button {
   @apply z-20;
 }
 .select ul[role='listbox'],
-.dropdown [role='menu'] {
+.dropdown [role='menu'],
+.Header {
   @apply z-10;
 }
